# d2bs_ejt1

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  bugs.txt  js32.h
cmake/: d2bs_version.cmake  version.rc.in
src/: AutoRoot.h  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  Constants.h  Control.cpp  Core.cpp  D2BS.cpp  D2BS.h  D2Handlers.cpp  D2Helpers.cpp  D2Helpers.h  D2Intercepts.cpp  D2Loader.h  D2NetHandlers.cpp  D2Ptrs.h  Events.cpp  Events.h  File.cpp  File.h  Game.cpp  Game.h  Hash.cpp  Helpers.cpp  JSArea.cpp  JSArea.h  JSControl.cpp  JSControl.h  JSCore.cpp  JSDirectory.cpp  JSDirectory.h  JSExits.cpp  JSExits.h  JSFile.cpp  JSFile.h  JSFileTools.cpp  JSGame.cpp  JSHash.cpp  JSMenu.cpp  (+38 more)
src/Map/Diablo_II/: ActMap.cpp  ActMap.h  LevelMap.cpp  LevelMap.h
src/Map/Path/: AStarPath.h
src/Map/Path/Reduction/: JSPathReducer.h  PathReducer.h  TeleportPathReducer.h  WalkPathReducer.h
src/core/: ActMap.cpp  ActMap.h  BlankMap.h  Control.cpp  Control.h  Core.cpp  Core.h  File.cpp  File.h  Game.cpp  Game.h  Hash.cpp  Hash.h  LevelMap.cpp  LevelMap.h  MPQStats.cpp  MPQStats.h  Profile.cpp  Profile.h  Room.cpp  Room.h  ScreenHook.cpp  ScreenHook.h  Unit.cpp  Unit.h  dde.cpp  dde.h
src/d2bs/: D2BS.cpp  D2BS.h  cguard.h  engine.cpp  engine.h  entry.cpp  variables.h  version.h
src/d2bs/core/: ActMap.cpp  ActMap.h  BlankMap.h  Control.cpp  Control.h  Core.cpp  Core.h  File.cpp  File.h  Game.cpp  Game.h  Hash.cpp  Hash.h  LevelMap.cpp  LevelMap.h  MPQStats.cpp  MPQStats.h  Map.h  Profile.cpp  Profile.h  Room.cpp  Room.h  ScreenHook.cpp  ScreenHook.h  Unit.cpp  Unit.h  dde.cpp
src/d2bs/diablo/: Constants.h  D2Helpers.cpp  D2Helpers.h  D2Ptrs.h  Patch.h
src/d2bs/diablo/handlers/: D2Handlers.cpp  D2Handlers.h  D2NetHandlers.cpp
src/d2bs/diablo/patches/: D2Intercepts.cpp  D2Intercepts.h
src/d2bs/new_core/: application.cpp  application.h  settings.cpp  settings.h
src/d2bs/new_util/: localization.h
src/d2bs/pathing/: AStarPath.h  Path.h
src/d2bs/pathing/reduction/: JSPathReducer.h  NoPathReducer.h  PathReducer.h  TeleportPathReducer.h  WalkPathReducer.h
src/d2bs/script/: AutoRoot.cpp  AutoRoot.h  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h  event.cpp  event.h  js32.cpp  js32.h
src/d2bs/script/api/: JSArea.cpp  JSArea.h  JSControl.cpp  JSControl.h  JSCore.cpp  JSCore.h  JSDirectory.cpp  JSDirectory.h  JSExits.cpp  JSExits.h  JSFile.cpp  JSFile.h  JSFileTools.cpp  JSFileTools.h  JSGame.cpp  JSGame.h  JSGlobalClasses.cpp  JSGlobalClasses.h  JSGlobalFuncs.h  JSHash.cpp  JSHash.h  JSMenu.cpp  JSMenu.h  JSParty.cpp  JSParty.h  JSPresetUnit.cpp  JSPresetUnit.h  JSProfile.cpp  JSProfile.h  JSRoom.cpp  JSRoom.h  JSSQLite.cpp  JSSQLite.h  JSSandbox.cpp  JSSandbox.h  JSScreenHook.cpp  JSScreenHook.h  JSScript.cpp  JSScript.h  JSSocket.cpp  (+3 more)
src/d2bs/utils/: CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  CriticalSections.h  D2Loader.h  Events.cpp  Events.h  Helpers.cpp  Helpers.h  MapHeader.h  Offset.cpp  Offset.h  TimedAlloc.h  dde.cpp  dde.h  mpmc_queue.h  stringhash.cpp
src/diablo/: D2Helpers.cpp  D2Helpers.h  D2Ptrs.h  D2Skills.h  D2Structs.h  Patch.h
src/diablo/handlers/: D2Handlers.cpp  D2Handlers.h  D2NetHandlers.cpp
src/diablo/patches/: D2Intercepts.cpp  D2Intercepts.h
src/pathing/: AStarPath.h  Path.h
src/pathing/reduction/: JSPathReducer.h  NoPathReducer.h  PathReducer.h  TeleportPathReducer.h  WalkPathReducer.h
src/script/: js32.cpp  js32.h
src/script/api/: JSArea.cpp  JSArea.h  JSControl.cpp  JSControl.h  JSCore.cpp  JSCore.h  JSDirectory.cpp  JSDirectory.h  JSExits.h  JSFile.cpp  JSFile.h  JSFileTools.cpp  JSFileTools.h  JSGame.cpp  JSGame.h  JSGlobalClasses.cpp  JSGlobalClasses.h  JSGlobalFuncs.h  JSHash.cpp  JSHash.h  JSMenu.cpp  JSMenu.h  JSParty.cpp  JSParty.h  JSPresetUnit.cpp  JSPresetUnit.h  JSProfile.cpp  JSProfile.h  JSRoom.cpp  JSRoom.h  JSSQLite.cpp  JSSQLite.h  JSSandbox.cpp  JSSandbox.h  JSScreenHook.cpp  JSScreenHook.h  JSScript.cpp  JSScript.h  JSSocket.cpp  JSSocket.h  (+2 more)
src/script/engine/: AutoRoot.cpp  AutoRoot.h  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h
src/utils/: ArrayEx.h  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  CriticalSections.h  Events.cpp  Events.h  Helpers.cpp  Helpers.h  MapHeader.h  Matrix.h  Offset.cpp  Offset.h  StackWalker.cpp  StackWalker.h  SyncObj.h  TimedAlloc.h  sqlite3.h  stringhash.cpp
